[project]
name = "blendercam"
version = "3.1.6"
description = "G-code Generation Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # llvmlite
    "llvmlite ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "llvmlite ; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "llvmlite ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "llvmlite ; platform_machine == 'AMD64' and sys_platform == 'win32'",
    # numba
    "numba ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "numba ; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "numba ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "numba ; platform_machine == 'AMD64' and sys_platform == 'win32'",
    # opencamlib
    "opencamlib ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "opencamlib ; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "opencamlib ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "opencamlib ; platform_machine == 'AMD64' and sys_platform == 'win32'",
    # shapely
    "shapely ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "shapely ; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "shapely ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "shapely ; platform_machine == 'AMD64' and sys_platform == 'win32'",
]

[tool.uv.sources]
llvmlite = [
    { marker = "platform_machine == 'arm64' and sys_platform == 'darwin'", path = "fabex/wheels/llvmlite-0.46.0-cp313-cp313-macosx_12_0_arm64.whl" },
    { marker = "platform_machine == 'aarch64' and sys_platform == 'linux'", path = "fabex/wheels/llvmlite-0.46.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" },
    { marker = "platform_machine == 'x86_64' and sys_platform == 'linux'", path = "fabex/wheels/llvmlite-0.46.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" },
    { marker = "platform_machine == 'AMD64' and sys_platform == 'win32'", path = "fabex/wheels/llvmlite-0.46.0-cp313-cp313-win_amd64.whl" },
]
numba = [
    { marker = "platform_machine == 'arm64' and sys_platform == 'darwin'", path = "fabex/wheels/numba-0.64.0-cp313-cp313-macosx_12_0_arm64.whl" },
    { marker = "platform_machine == 'aarch64' and sys_platform == 'linux'", path = "fabex/wheels/numba-0.64.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" },
    { marker = "platform_machine == 'x86_64' and sys_platform == 'linux'", path = "fabex/wheels/numba-0.64.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" },
    { marker = "platform_machine == 'AMD64' and sys_platform == 'win32'", path = "fabex/wheels/numba-0.64.0-cp313-cp313-win_amd64.whl" },
]
opencamlib = [
    { marker = "platform_machine == 'arm64' and sys_platform == 'darwin'", path = "fabex/wheels/opencamlib-2026.3.5.dev92-cp313-cp313-macosx_15_0_arm64.whl" },
    { marker = "platform_machine == 'aarch64' and sys_platform == 'linux'", path = "fabex/wheels/opencamlib-2026.3.3.dev27-cp313-cp313-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl" },
    { marker = "platform_machine == 'x86_64' and sys_platform == 'linux'", path = "fabex/wheels/opencamlib-2026.3.3.dev27-cp313-cp313-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl" },
    { marker = "platform_machine == 'AMD64' and sys_platform == 'win32'", path = "fabex/wheels/opencamlib-2026.3.3.dev27-cp313-cp313-win_amd64.whl" },
]
shapely = [
    { marker = "platform_machine == 'arm64' and sys_platform == 'darwin'", path = "fabex/wheels/shapely-2.1.2-cp313-cp313-macosx_11_0_arm64.whl" },
    { marker = "platform_machine == 'aarch64' and sys_platform == 'linux'", path = "fabex/wheels/shapely-2.1.2-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" },
    { marker = "platform_machine == 'x86_64' and sys_platform == 'linux'", path = "fabex/wheels/shapely-2.1.2-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" },
    { marker = "platform_machine == 'AMD64' and sys_platform == 'win32'", path = "fabex/wheels/shapely-2.1.2-cp313-cp313-win_amd64.whl" },
]

[tool.pytest.ini_options]
strict = true
pythonpath = [
    "fabex/tests"
]
addopts = [
    "-vvv",
    "-ra",
    "--capture=sys",
    "--ignore=blender",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'"
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
# uv sync fails for the following:
# "sys_platform == 'darwin' and platform_machine == 'x86_64'",
# "sys_platform == 'linux' and platform_machine == 'aarch64'",

[tool.black]
line-length = 100
exclude = "/fabex/presets/"
target-version = ['py313']
include = '\.py'

[tool.ruff]
line-length = 100
exclude = ["fabex/presets/"]
target-version = 'py313'

[dependency-groups]
dev = [
    "bpy>=5.1.2",
    "pytest>=9.1.1",
]
